añadida posibilidad de cargar avatar

--- a/www/tareas.html
+++ b/www/tareas.html
@@ -13,7 +13,8 @@
 
 <body>
     <header>
-        <span class="fas fa-user"></span>  
+        <img src="" id="imgavatar" alt="">
+        <!-- <span class="fas fa-user"></span>   -->
         <span id="user">[usuario]</span>   
         <ul id="userOptions" class="dropdown">
             <li>
@@ -71,7 +72,9 @@
                 </div>
             </form>
 
-            <output id="list"></output>
+            <output id="list">
+                <img src=""  id="avatar" alt="" style="height:100px;width:100px">
+            </output>
         </div>
 
         <div id="crearTarea" class="ocultar">
